--- a/10_OOP/10_OOP.org
+++ b/10_OOP/10_OOP.org
@@ -165,7 +165,6 @@ class Vindue(arcade.Window):
     def __init__(self, bredde, hoejde, titel):
         """ Initialisator. """
 
-        # Call the parent class's init function
         # Kalder forældreklasse(n/rnes) initialisatorer
         super().__init__(bredde, hoejde, titel)
         # Sætter baggrundsfarven én gang
@@ -192,6 +191,7 @@ def main():
 main()
 #+end_src
 
+[[./img/hoppende_bold_i_vindue.gif]]
 
 ** Opgaver
 1. Ændr på den nuværende bolds startposition, hastighed, størrelse og farve.
@@ -205,9 +205,11 @@ main()
 5. Find selv på andre (sjove/udfordrende) tilføjelser/ændringer.
 
    
-* Så styr dog de bolde!
+* Så styr dog den bold!
 
-Som det ser ud lige nu, bevæger boldene sig rundt på egen hånd. Det eneste vi kan styre er deres begyndelsesbetingelser. I dette afsnit skal vi se på, hvordan vi som brugere kan styre objekter på skærmen i programmer skrevet ved hjælp af arcadebibliotektet. Før vi går i gang med det opretter vi først en basal boldklasse, som /ikke/ indeholder starthastigheder men kun position, radius og farve og heller ikke en =update=-metode. Opdateringen af bolden skal =Vindue=-klassen i arcade tage sig af.
+Som det ser ud lige nu, bevæger boldene sig rundt på egen hånd. Det eneste vi kan styre er deres begyndelsesbetingelser. I dette afsnit skal vi se på, hvordan vi som brugere kan styre objekter på skærmen i programmer skrevet ved hjælp af arcadebibliotektet. Før vi går i gang med det, opretter vi først en basal boldklasse, som /ikke/ indeholder starthastigheder men kun position, radius og farve og heller ikke en =update=-metode. Opdateringen af bolden skal =Vindue=-klassen i arcade tage sig af.
+
+Den følgende kode er udgangspunktet for implementering af bevægelse ved forskellige inputmetoder.
 
 #+begin_src python :exports both :results none :eval never-export
 import arcade
@@ -220,8 +222,6 @@ class Bold:
     def __init__(self, position_x, position_y, hastighed_x, hastighed_y, radius, farve):
         self.position_x = position_x
         self.position_y = position_y
-        self.hastighed_x = hastighed_x
-        self.hastighed_y = hastighed_y
         self.radius = radius
         self.farve = farve
 
@@ -235,7 +235,6 @@ class Vindue(arcade.Window):
     def __init__(self, bredde, hoejde, titel):
         """ Initialisator. """
 
-        # Call the parent class's init function
         # Kalder forældreklasse(n/rnes) initialisatorer
         super().__init__(bredde, hoejde, titel)
         # Sætter baggrundsfarven én gang
@@ -259,3 +258,213 @@ def main():
 
 main()
 #+end_src
+
+* Så styr dog den bold - med keyboardet
+Vi tager udgangspunkt i forrige afsnits kode om indføre styring af en bold ved hjælp af keyboardet. Når man anvender =arcade= er det kutyme at lægge  styring af objekterne i selve =Window=-klassen. Klassen =Window= har de indbyggede metoder =on_key_press=, =on_key_release= når det omhandler styring med keyboardet. Styring af objekter i arcade foregår derfor ved at /overskrive/ de to nævnte metoder, når det giver mening. Boldklassen har yderligere fået instansvariablerne =hastighed_x= og =hastighed_y= tilbage sammen med metoden =update=.
+
+Se nærmere i koden nedenfor:
+
+#+begin_src python :exports both :results none :eval never-export :comments link :tangle bold_med_keyboard.py
+import arcade
+
+SKAERMBREDDE = 640
+SKAERMHOEJDE = 480
+BOLDHASTIGHED = 3
+class Bold:
+    """ Denne klasse beskriver/styrer en bold, som hopper i vinduet på skærmen. """
+
+    def __init__(self, position_x, position_y, hastighed_x, hastighed_y, radius, farve):
+        self.position_x = position_x
+        self.position_y = position_y
+        self.hastighed_x = hastighed_x
+        self.hastighed_y = hastighed_y
+        self.radius = radius
+        self.farve = farve
+
+    def update(self):
+        self.position_x += self.hastighed_x
+        self.position_y += self.hastighed_y
+
+    def draw(self):
+        """ Tegner bolden som en simpel udfyldt cirkel vha arcade. """
+        arcade.draw_circle_filled(self.position_x, self.position_y, self.radius, self.farve)
+
+class Vindue(arcade.Window):
+    """ Vores nye vinduesklasse. """
+
+    def __init__(self, bredde, hoejde, titel):
+        """ Initialisator. """
+
+        # Call the parent class's init function
+        # Kalder forældreklasse(n/rnes) initialisatorer
+        super().__init__(bredde, hoejde, titel)
+        # Sætter baggrundsfarven én gang
+        arcade.set_background_color(arcade.color.ASH_GREY)
+        self.setup()
+
+    def setup(self):
+        self.bold = Bold(100, 200, 0, 0, 5, arcade.csscolor.RED)
+
+    def on_key_press(self, tast, modifikationstast):
+        """ Kørers når brugeren trykker på en tast. """
+        if tast == arcade.key.LEFT:
+            self.bold.hastighed_x = - BOLDHASTIGHED
+        elif tast == arcade.key.RIGHT:
+            self.bold.hastighed_x = BOLDHASTIGHED
+        elif tast == arcade.key.UP:
+            self.bold.hastighed_y = BOLDHASTIGHED
+        elif tast == arcade.key.DOWN:
+            self.bold.hastighed_y = - BOLDHASTIGHED
+
+    def on_key_release(self, tast, modifikationstast):
+        """ Kørers når brugeren slipper en tast. """
+        if tast == arcade.key.LEFT or tast == arcade.key.RIGHT:
+            self.bold.hastighed_x = 0
+        elif tast == arcade.key.UP or tast == arcade.key.DOWN:
+            self.bold.hastighed_y = 0
+            
+    def update(self, delta_tid):
+        self.bold.update()
+        
+    def on_draw(self):
+        self.clear() # Man kunne også skrive arcade.start_render()
+        self.bold.draw()
+
+def main():
+    vindue = Vindue(SKAERMBREDDE, SKAERMHOEJDE, "En bold styret med keyboardet")
+
+    arcade.run()
+
+main()
+#+end_src
+
+[[./img/bold_keyboard.gif]]
+
+- Kopier og kør koden.
+- Som I nok kan se ud af koden, skal I anvende piletasterne.
+- Ændr på koden, så i kan trykke på wasd i stedet for (eller måske begge dele på en gang).
+- Hvad sker der, hvis man fjerner =on_key_release=? (I kan bare udkommentere alle linjerne i den metode, altså sætte # foran koden)
+- Kan I ændre hastigheden på bolden?
+
+* Den bold må altså ikke ryge ud af vinduet!
+Som I nok opdagede i forrige afsnit, så var det muligt for bolden at bevæge sig ud af vinduet. Dette må vi hellere sætte en stopper for.
+
+Dette kan vi gøre ved at indføre lidt ekstra tjek. Denne gang i =Bold=-klassen, hvor vi vil sørge for at holde bolden inden for vinduets dimensioner.
+
+- Kør følgende kode, og tjek at det virker.
+- Gennemgå koden, og find ud af hvor ændringen er, og hvad den gør.
+
+#+begin_src python :exports both :results none :eval never-export :comments link :tangle bold_med_keyboard_inden_for_vinduet.py
+import arcade
+
+SKAERMBREDDE = 640
+SKAERMHOEJDE = 480
+BOLDHASTIGHED = 3
+class Bold:
+    """ Denne klasse beskriver/styrer en bold, som hopper i vinduet på skærmen. """
+
+    def __init__(self, position_x, position_y, hastighed_x, hastighed_y, radius, farve):
+        self.position_x = position_x
+        self.position_y = position_y
+        self.hastighed_x = hastighed_x
+        self.hastighed_y = hastighed_y
+        self.radius = radius
+        self.farve = farve
+
+    def update(self):
+        self.position_x += self.hastighed_x
+        self.position_y += self.hastighed_y
+
+        if self.position_x < self.radius:
+            self.position_x = self.radius
+
+        if self.position_x > SKAERMBREDDE - self.radius:
+            self.position_x = SKAERMBREDDE - self.radius
+
+        if self.position_y < self.radius:
+            self.position_y = self.radius
+
+        if self.position_y > SKAERMHOEJDE - self.radius:
+            self.position_y = SKAERMHOEJDE - self.radius
+
+    def draw(self):
+        """ Tegner bolden som en simpel udfyldt cirkel vha arcade. """
+        arcade.draw_circle_filled(self.position_x, self.position_y, self.radius, self.farve)
+
+class Vindue(arcade.Window):
+    """ Vores nye vinduesklasse. """
+
+    def __init__(self, bredde, hoejde, titel):
+        """ Initialisator. """
+
+        # Call the parent class's init function
+        # Kalder forældreklasse(n/rnes) initialisatorer
+        super().__init__(bredde, hoejde, titel)
+        # Sætter baggrundsfarven én gang
+        arcade.set_background_color(arcade.color.ASH_GREY)
+        self.setup()
+
+    def setup(self):
+        self.bold = Bold(100, 200, 0, 0, 5, arcade.csscolor.RED)
+
+    def on_key_press(self, tast, modifikationstast):
+        """ Kørers når brugeren trykker på en tast. """
+        if tast == arcade.key.LEFT:
+            self.bold.hastighed_x = - BOLDHASTIGHED
+        elif tast == arcade.key.RIGHT:
+            self.bold.hastighed_x = BOLDHASTIGHED
+        elif tast == arcade.key.UP:
+            self.bold.hastighed_y = BOLDHASTIGHED
+        elif tast == arcade.key.DOWN:
+            self.bold.hastighed_y = - BOLDHASTIGHED
+
+    def on_key_release(self, tast, modifikationstast):
+        """ Kørers når brugeren slipper en tast. """
+        if tast == arcade.key.LEFT or tast == arcade.key.RIGHT:
+            self.bold.hastighed_x = 0
+        elif tast == arcade.key.UP or tast == arcade.key.DOWN:
+            self.bold.hastighed_y = 0
+            
+    def update(self, delta_tid):
+        self.bold.update()
+        
+    def on_draw(self):
+        self.clear() # Man kunne også skrive arcade.start_render()
+        self.bold.draw()
+
+def main():
+    vindue = Vindue(SKAERMBREDDE, SKAERMHOEJDE, "En bold styret med keyboardet")
+
+    arcade.run()
+
+main()
+#+end_src
+
+* Ikke beerpong - "bare" PONG
+#+attr_html: :width 50%
+[[./img/beerpong.jpg]]
+
+#+attr_html: :width 100%
+[[./img/pong_demo.gif]]
+
+I skal nu implementere jeres egne løsninger til en prototype af spillet PONG. I skal anvende OOP. Her kommer der lister med need to have og nice to have:
+
+Need to have:
+- En Vindue-klasse, som holder styr på selve spillet
+- En Bold-klasse
+  - Skal holde sig inden for toppen og bunden af vinduet
+  - Skal resettes, når den kommer uden for vinduets højre og venstre side. (Hvis man bare vil spille med et "bat", så skal bolden også bare holde sig inden for højre eller venstre side og kun resettets hvis den kommer uden for den anden side.
+- En Bat-klasse:
+  - Et rektangel, som kan bevæge sig op og ned vha. keyboardet, men ikke til siderne.
+  - Skal holde sig inden for skærmen.
+
+
+Nice to have:
+- Hold styr på point.
+- Tilfældig retning på bolden, når den resettes.
+- Single- eller multiplayer.
+- Mere end én bold.
+- I kan selv komme på flere idéer.
+
+
+* Så styr dog den bold - med musen
