--- a/10_OOP/10_OOP.org
+++ b/10_OOP/10_OOP.org
@@ -443,6 +443,78 @@ main()
 #+end_src
 
 [[./img/bold_keyboard_inden_for_vindue.gif]]
+* Så styr dog den bold - med musen
+Det er også muligt at styre med musen. Hvis man bare vil have en bold, som kan bevæges på skærmen, men ikke bevæge sig uden for skærmen, kan en implementering se ud som følger:
+
+#+begin_src python :exports both :results none :eval never-export :comments link :tangle bold_med_mus_inden_for_vinduet.py
+import arcade
+
+SKAERMBREDDE = 640
+SKAERMHOEJDE = 480
+BOLDHASTIGHED = 3
+
+
+class Bold:
+    """Denne klasse beskriver/styrer en bold, som hopper i vinduet på skærmen."""
+
+    def __init__(self, position_x, position_y, hastighed_x, hastighed_y, radius, farve):
+        self.position_x = position_x
+        self.position_y = position_y
+        self.radius = radius
+        self.farve = farve
+
+    def draw(self):
+        """Tegner bolden som en simpel udfyldt cirkel vha arcade."""
+        arcade.draw_circle_filled(
+            self.position_x, self.position_y, self.radius, self.farve
+        )
+
+
+class Vindue(arcade.Window):
+    """Vores nye vinduesklasse."""
+
+    def __init__(self, bredde, hoejde, titel):
+        """Initialisator."""
+
+        # Call the parent class's init function
+        # Kalder forældreklasse(n/rnes) initialisatorer
+        super().__init__(bredde, hoejde, titel)
+        # Sætter baggrundsfarven én gang
+        arcade.set_background_color(arcade.color.ASH_GREY)
+        self.set_mouse_visible(False)
+        self.setup()
+
+    def setup(self):
+        self.bold = Bold(self.width / 2, 25, 0, 0, 5, arcade.csscolor.RED)
+
+    def on_mouse_motion(self, x, y, _botton, _modifiers):
+        if x > self.bold.radius and x < self.width - self.bold.radius:
+            self.bold.position_x = x
+        if y > self.bold.radius and y < self.height - self.bold.radius:
+            self.bold.position_y = y
+
+    def on_draw(self):
+        self.clear()  # Man kunne også skrive arcade.start_render()
+        self.bold.draw()
+
+
+def main():
+    vindue = Vindue(SKAERMBREDDE, SKAERMHOEJDE, "En bold styret med musen")
+
+    arcade.run()
+
+
+main()
+#+end_src
+
+[[./img/bold_mus_inden_for_vindue.gif]]
+
+- Hvis bolden kun må kunne bevæge sig langs x-aksen f.eks., kan man bare fjerne følgende linjer fra forrige eksempel:
+  #+begin_src python :exports both :results none :eval never-export
+  if y > self.bold.radius and y < self.height - self.bold.radius:
+      self.bold.position_y = y
+  #+end_src
+  
 * Ikke beerpong - "bare" PONG
 #+attr_html: :width 50%
 [[./img/beerpong.jpg]]
@@ -472,4 +544,3 @@ Nice to have:
 - I kan selv komme på flere idéer.
 
 
-* Så styr dog den bold - med musen
